Changed the code to have only selenium tests.